--- a/src/assets/Home.css
+++ b/src/assets/Home.css
@@ -37,3 +37,34 @@
     align-items: center;
     font-size: x-large;
 }
+/* css for section three */
+.section-three {
+    display: flex;
+    flex-direction: column;
+}
+
+.section-three-one {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.section-three-one div{
+    width: 50px;
+    height: 10px;
+    border-radius: 5px;
+    background-color: white;
+    margin-right: 150px;
+}
+
+.section-three-one h1 {
+    color: white;
+}
+
+/* css for svg */
+.svg {
+    /* width: 1500px; */
+    fill: white;
+
+} 
