--- a/src/assets/Home.css
+++ b/src/assets/Home.css
@@ -41,6 +41,7 @@
 .section-three {
     display: flex;
     flex-direction: column;
+    background-color: rgb(124,87,230);
 }
 
 .section-three-one {
@@ -48,6 +49,39 @@
     flex-direction: row-reverse;
     align-items: center;
     justify-content: flex-end;
+}
+
+.section-three-two img{
+    width: 300px;
+    height: 180px;
+    position: relative;
+    bottom: 40px;
+    right: 15px;
+    border-radius: 10px;
+}
+
+.section-three-two div {
+    color: rgb(122,122,122);
+}
+
+.div-p{
+    margin-right: 210px;
+}
+
+.bold {
+    font-weight: 900;
+    color: black;
+}
+
+.div-a{
+    display: flex;
+    justify-content: center;
+    background-color: rgb(236,236,236);
+}
+
+.div-a a {
+    color: rgb(17,185,205);
+    display: flex;
 }
 
 .section-three-one div{
