--- a/src/assets/Home.css
+++ b/src/assets/Home.css
@@ -116,3 +116,38 @@
     box-shadow: 0px 0px 10px 5px blue;
 
 }
+
+/* css for section-five */
+
+.section-five {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-five img {
+    width: 333px;
+    border-radius: 20px 15px 0 0;
+}
+
+.articles {
+    width: 1000px;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: flex-end;
+    color: rgb(17,185,205);
+    font-size: 40px;
+}
+
+.articles div {
+    width: 40px;
+    height: 10px;
+    background-color: rgb(17,185,205);
+    border-radius: 10px;
+}
+
+a p{
+    color: black;
+    font-size: x-large;
+}
