add css for section seven

--- a/src/assets/Home.css
+++ b/src/assets/Home.css
@@ -188,3 +188,36 @@ a p{
     border-radius: 10px;
 }
 
+/* css for section-seven */
+
+.section-seven{
+    width: 1200px;
+    height: 400px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    box-shadow: 0px 0px 45px -7px rgba(0, 0, 0, 0.23);
+    border-radius: 20px;
+    margin: auto;
+    margin-top: 120px;
+    margin-bottom: auto;
+    background-image: url('../assets/BG.png');
+}
+
+.section-seven div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 520px;
+    border: 2px black;
+    margin: 30px;
+}
+
+.section-seven img {
+    width: 500px;
+}
+
+.section-seven a {
+    font-size: 32px;
+    font-weight: bolder;
+}
