add css for video section

--- a/src/assets/Home.css
+++ b/src/assets/Home.css
@@ -221,3 +221,10 @@ a p{
     font-size: 32px;
     font-weight: bolder;
 }
+
+/* css for video section */
+
+.video {
+    width: 1200px;
+    margin: auto;
+}
