--- a/src/assets/Home.css
+++ b/src/assets/Home.css
@@ -241,3 +241,20 @@ a p{
 .icon {
     transform: rotate(180deg);
 }
+
+/* css for contact */
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: cadetblue;
+}
+
+.title-contact {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
+}
