update font-size and add font-family

--- a/src/assets/Home.css
+++ b/src/assets/Home.css
@@ -9,8 +9,9 @@
 }
 
 .section-one h2 {
-    font-size: 40px;
+    font-size: 50px;
     font-weight: bolder;
+    font-family: "یکان بخ", Sans-serif;
 }
 
 .section-one p {
