--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -286,8 +286,7 @@ a p{
     width: 1000px;
     height: 600px;
     border-radius: 12px;
-    background-color: #000000;
-    opacity: 0.5;
+    background-color: rgba(0, 0, 0, 0.3);
     padding: 10px;
 }
 
